unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Promo Codes</fullName>
        <description>Promo Codes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVD_Discount_Picklist__c</fullName>
        <label>AVD Discount (%)</label>
        <picklist>
            <controllingField>Contract_Type__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AVD_Discount__c</fullName>
        <formula>IF(ISPICKVAL(Contract_Type__c, &quot;GSA&quot;), 18,
IF(ISPICKVAL(Contract_Type__c, &quot;WSCA&quot;), 16, 
IF(ISPICKVAL(Contract_Type__c, &quot;Texas DIR&quot;), 17, 
IF(ISPICKVAL(Contract_Type__c, &quot;Reseller&quot;),0, 
IF(MRC_for_AVD__c  &lt;= 249, 0,
IF(MRC_for_AVD__c  &lt;= 9999, 8,
IF(MRC_for_AVD__c  &lt;= 49999, 10,
IF(MRC_for_AVD__c &lt;= 50000, 12,
15)))))))) / 100</formula>
        <label>AVD Discount (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVD_Final__c</fullName>
        <formula>8+8</formula>
        <label>AVD Final (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVD_Type__c</fullName>
        <label>AVD Type</label>
        <picklist>
            <controllingField>Contract_Type__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activation_or_Loyalty_Credit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Activation or Loyalty Credit Per Line</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjust_Commission_Payout__c</fullName>
        <inlineHelpText>This is a percent field</inlineHelpText>
        <label>Adjust Commission Payout (%)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BDM_Contract_Type__c</fullName>
        <label>BDM Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA/MSCA - A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA/MSCA - B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA/MSCA - C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA/WSCA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Sale_or_Cosell_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Partner Sale or Cosell Deal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>IF (ISPICKVAL( Rep_Title__c, &quot;ARSB/ISRSB&quot;), 89,
IF(ISPICKVAL(Rep_Title__c, &quot;BDM&quot;), 91,
IF(ISPICKVAL(Rep_Title__c, &quot;BPSR&quot;), 12,
IF(ISPICKVAL(Rep_Title__c, &quot;SBDM&quot;), 50,
IF(ISPICKVAL(Rep_Title__c, &quot;SAM&quot;), 50,
IF(ISPICKVAL(Rep_Title__c, &quot;GAM_MNC&quot;), 28,
IF(ISPICKVAL(Rep_Title__c, &quot;GAM_GOV&quot;), 57,
999)))))))</formula>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Months__c</fullName>
        <label>Contract Term (Months)</label>
        <picklist>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>MCSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSCA-EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA - EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA - EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSCA - EAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APA-IL Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University- NO CONTRACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Texas DIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY OGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMO T&amp;C&apos;s</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount (%)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engineering_Costs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Engineering Costs</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_Pooling_Lines__c</fullName>
        <label>Existing Pooling Lines</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_AVD__c</fullName>
        <formula>IF(ISBLANK(TEXT(Discount__c)), value(TEXT(AVD_Discount_Picklist__c)), value(text(Discount__c)))</formula>
        <label>Final AVD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <label>Final Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Commission_Amount__c</fullName>
        <formula>IF(Adjust_Commission_Payout__c=0,  Commission__c, (Commission__c *  Adjust_Commission_Payout__c))</formula>
        <label>Final Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_hand_off_to_Account_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final transition to Account Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Fast_Start_AVD_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fixed/Fast Start AVD (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_SIMs__c</fullName>
        <formula>100 *  Probability</formula>
        <inlineHelpText>SIM Total x Probability %</inlineHelpText>
        <label>Forecast SIMs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFB_MB__c</fullName>
        <label>GFB - $/MB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GFB_MOU__c</fullName>
        <label>GFB - $/MOU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GFB_MRC_After__c</fullName>
        <label>GFB MRC After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GFB_MRC__c</fullName>
        <label>GFB MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gain_Verbal_commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gain Verbal commitment for next steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gained_Verbal_Commitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gained Verbal Commitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Discount__c</fullName>
        <label>Global Discount (%)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IDC_MRC__c</fullName>
        <label>IDC MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDR_MB__c</fullName>
        <label>IDR - $/MB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDR_MOU__c</fullName>
        <label>IDR - $/MOU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDR_MRC_After__c</fullName>
        <label>IDR MRC After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IDR_MRC__c</fullName>
        <label>IDR MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IM_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_and_AM_Review_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IM and AM Review Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INPT_Award_Date__c</fullName>
        <description>This field is used by the INPUT Connector. This field defines the INPUT estimated Opportunity award date.</description>
        <inlineHelpText>This field is used by the INPUT Connector. This field defines the INPUT estimated Opportunity award date.</inlineHelpText>
        <label>Award Date (INPUT Estimate)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INPT_Competition_Type__c</fullName>
        <description>This field is used by the INPUT Connector. This field defines the INPUT Opportunity competition type. Examples of competition types are: &quot;8(a) Set-Aside&quot; and &quot;Full and Open&quot;.</description>
        <inlineHelpText>This field is used by the INPUT Connector. This field defines the INPUT Opportunity competition type. Examples of competition types are: &quot;8(a) Set-Aside&quot; and &quot;Full and Open&quot;.</inlineHelpText>
        <label>Competition_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INPT_Contract_Type__c</fullName>
        <description>This field is used by the INPUT Connector. This field defines the INPUT Opportunity contract type. An example of a contract type is: &quot;Cost Plus Award Fee&quot;.</description>
        <inlineHelpText>This field is used by the INPUT Connector. This field defines the INPUT Opportunity contract type. An example of a contract type is: &quot;Cost Plus Award Fee&quot;.</inlineHelpText>
        <label>Contract_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INPT_Duration__c</fullName>
        <description>This field is used by the INPUT Connector. This field defines the INPUT Opportunity contract duration in terms of base and option years and months.</description>
        <inlineHelpText>This field is used by the INPUT Connector. This field defines the INPUT Opportunity contract duration in terms of base and option years and months.</inlineHelpText>
        <label>Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Promo_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Promo Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRC_Overage_Adjust__c</fullName>
        <defaultValue>1.00</defaultValue>
        <label>MRC Overage Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRC__c</fullName>
        <label>MRC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRC_for_AVD__c</fullName>
        <formula>8 +  8</formula>
        <label>MRC for AVD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MVS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MVS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Invest_per_Line__c</fullName>
        <label>Market Invest per Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Months_of_Deployment__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Months of Deployment</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operating_Margin__c</fullName>
        <label>Operating Margin (%)</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payback_Months__c</fullName>
        <label>Payback Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo Code</label>
        <referenceTo>Promo_Codes__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Title__c</fullName>
        <inlineHelpText>Select the title of the sales rep from the drop down</inlineHelpText>
        <label>Rep Title</label>
        <picklist>
            <picklistValues>
                <fullName>ARSB/ISRSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM_MNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GAM_GOV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tenure_Modification__c</fullName>
        <label>Tenure Modification</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <formula>IF(
ISPICKVAL(Contract_Term_Months__c, &quot;12&quot;), 8,
IF(
ISPICKVAL(Contract_Term_Months__c, &quot;24&quot;), 17,
IF(
ISPICKVAL(Contract_Term_Months__c, &quot;36&quot;), 20, 0)))</formula>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived_ETF_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waived ETF (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Promo_Codes</fullName>
        <active>true</active>
        <businessProcess>Promo Codes</businessProcess>
        <label>Promo Codes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>